syntax = "proto3";

option go_package="orders/pb";

enum OrderStatus {
  processing = 0;
  transit = 1;
  delivered = 2;
  cancelled = 3;
}

message Order {
  string id = 1;
  OrderStatus status = 2;
  repeated Product items = 3;
  int64 deliveryDate = 4;
  int64 createdAt = 5;
}

message Product {
  string id = 1;
  double price = 2;
  double name = 3;
}

message Customer {
  string id = 1;
  string name = 2;
  Location location = 3;
}

message Location {
  double lat = 1;
  double lon = 2;
}

message OrderStatusUpdate {
  OrderStatus status = 1;
  string orderId = 2;
}

message Response {
  bool successful = 1;
  string message = 2;
}

message CreateOrderReq {
  Order order = 1;
}

message CreateOrderRes {
  Order order = 1;
}

message GetOrderDetailsReq {
  string id =1;
}

message GetOrderDetailsRes {
  Order order = 1;
}

message CreateCustomerReq {
  string Name = 1;
  int32 lat = 2;
  int32 lon = 3;
}

message CreateCustomerRes {
  bool success = 1;
  string message = 2;
}

message UpdateOrderStatusReq {
  OrderStatus status = 1;
  string id = 2;
}

message UpdateOrderStatusRes {
  bool success = 1;
  string message = 2;
}

message UpdateOrderReq {
  Order order = 1;
}

message UpdateOrderRes {
  Order order = 1;
}

service Orders {
  rpc GetOrderDetails(GetOrderDetailsReq) returns (GetOrderDetailsRes) {}
  rpc CreateOrder(CreateOrderReq) returns (CreateOrderRes) {}
  rpc CreateCustomer(CreateCustomerReq) returns (CreateCustomerRes) {}
  rpc UpdateOrderStatus(UpdateOrderStatusReq) returns (UpdateOrderStatusRes) {}
  rpc UpdateOrder(UpdateOrderReq) returns (UpdateOrderRes) {}
}